Fixed css overflow issue in the learning history box

--- a/sourcecode/SkillSync/src/main/resources/static/dashboard-view-frame.css
+++ b/sourcecode/SkillSync/src/main/resources/static/dashboard-view-frame.css
@@ -9,7 +9,7 @@ body, html {
 /* Main Container */
 .container {
     display: flex;
-    height: 121vh;
+    min-height: 121vh;
     overflow: auto;
 }
 
@@ -175,7 +175,7 @@ body, html {
     justify-content: flex-start;
     font-size: 24px;
     width: calc(100% - 200px);
-    height: 121vh;
+    min-height: 121vh;
     color: white;
     overflow: visible;
     transition: width 0.2s ease-out;
@@ -301,13 +301,15 @@ body, html {
 
 /* Learning History Box */
 .right-side-box {
-    flex: 1; /* Adjust width */
-    max-width: 550px; /* Adjust as needed */
-    height: 400px;
+    flex: 1;
+    max-width: 550px;
+    min-height: 400px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
     border-radius: 10px;
     border: 2px solid rgba(255, 255, 255, 0.2);
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .right-side-box h1 {
@@ -346,5 +348,5 @@ body, html {
 
 }
 .completed-title{
-   color: #FFD700;
+    color: #FFD700;
 }
